ChangeLog
=========

1.11.0 (unreleased)
-------------------

- Nothing changed yet.


1.10.0 (2020-11-04)
-------------------

*New:*

    * Add support of pathlib.Path objects, both in loading the config
      and through the new ``getpath`` getter.
    * Add ``mandatory_section`` option to ``ConfigGetter`` to enforce the use
      of a section in requested keys (and its underlying option ``key_validator`` on
      ``BaseConfigGetter`` to validate keys format)

*Removed:*

    * Drop support of Python 2.7 which reached EOL in January 2020
    * Drop support of Python 3.4 which reached EOL in 2019


1.9.0 (2019-02-01)
------------------

*Removed:*

    * Drop support of Python 3.3 which reached EOL in September 2017

*Deprecated:*

    * Use of list of non-strings as getconf.getlist() default value is deprecated


1.8.0 (2018-01-30)
------------------

*New:*

    * Add ``BaseConfigGetter`` and the notion of "finders" to ease customization.

*Note:*

    * Python 2.7 and 3.3 support will be dropped in next minor version.

1.7.1 (2017-10-20)
------------------

*Bugfix:*

    * Allows to override a configuration containing a dash.


1.7.0 (2017-02-23)
------------------

*New:*

    * Allow using an empty namespace
      (``ConfigGetter(namespace=getconf.NO_NAMESPACE``) to load unprefixed
      environment variables.

1.6.0 (2017-02-03)
------------------

*New:*

    * Remove support for string interpolation in .ini file
      If this undocumented getconf feature is still needed by some users,
      we might consider restoring it in a future release.

1.5.2 (2017-01-23)
------------------

*New:*

    * Add a new gettimedelta function to parse simple durations expressed as
      strings (10 days as '10d', 3 hours as '3h', etc.)


1.5.1 (2016-12-15)
------------------

*New:*

    * Display the key of the value that triggers an error to help resolve.


1.5.0 (2016-05-11)
------------------

*New:*
